--- a/src/assets/themeoverride.css
+++ b/src/assets/themeoverride.css
@@ -2,3 +2,11 @@
 	/* --focus-ring: 0 0 0 0.2rem var(--primary-color) !important; */
 	--focus-ring: rgba(241, 178, 74, 0.5) !important;
 }
+
+.nav-tabs .nav-link{
+	color: black !important;
+}
+
+.nav-link.active{
+	color: var(--primary-color) !important;
+}
